# Graph-Neural-Networks-for-Social-Good-Applications

./: .gitignore  .pre-commit-config.yaml  0434.py  README.md  pyproject.toml  quick_start.py  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: streamlit_app.py
scripts/: example.py  train.py
src/: __init__.py
src/data/: __init__.py  generator.py
src/eval/: __init__.py  evaluator.py
src/models/: __init__.py  social_gnn.py
src/train/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  device.py
tests/: test_social_gnn.py
